add GC logging for zookeeper