@@ -113,3 +113,5 @@ then
 fi
 
 #echo "CLASSPATH=$CLASSPATH"
+
+SERVER_JVMFLAGS="-Xloggc:$ZOO_LOG_DIR/zookeeper-gc.log -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps"
